Fixed home-section image on mobile view

--- a/src/css/faq.scss
+++ b/src/css/faq.scss
@@ -62,11 +62,13 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  user-select: none;
 
   h3 {
     font-weight: 600;
     line-height: 20px;
     transition: all 0.3s ease-in-out;
+    user-select: none;
   }
 
   svg {
@@ -83,6 +85,11 @@
 .faqDescription {
   line-height: 30px;
   transition: all 1s ease-in-out;
+  user-select: none;
+
+  p {
+    user-select: none;
+  }
 }
 
 @media screen and (max-width: 1430px) {
