--- a/src/css/homeBanner.scss
+++ b/src/css/homeBanner.scss
@@ -93,10 +93,10 @@
     flex-wrap: wrap;
     justify-content: center;
 
-    img {
+    .bannerImg {
       margin-left: 0px;
       transform: translateX(0px);
-      width: 75%;
+      width: 95%;
     }
   }
   .homeBanner-left {
